# mlflowgo

./: .gitignore  README.md  pyproject.toml
mlflowgo/: __init__.py  artifact_base.py  artifact_logger.py  base.py  classifier.py  cross_validation.py  mlflowgo.py  regressor.py  tournament.py
tests/: test_base.py  test_classifiers.py  test_cross_validation.py  test_models.py  test_regressor.py
