[tool.poetry]
name = "mlflowgo"
version = "0.1.0"
description = ""
authors = ["James Weaver <jceweaver@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mlflow = "^2.8.1"
scikit-learn = "^1.3.2"
flake8 = "^6.1.0"
shap = "^0.43.0"
pytest = "^7.4.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]